# opensearch-controller

./: .gitignore  README.md  demo.code-workspace
add-index/: .gitignore  .prettierrc  .tool-versions  package-lock.json  package.json  spotify-sample.json  tsconfig.json
add-index/src/: main.ts
add-index/src/core/config/: schema.ts
add-index/src/core/csv/: loader.ts
add-index/src/core/opensearch-client/: client.ts
add-index/src/model/: document.ts
docker/: Dockerfile  Taskfile.yml  compose.yml
parser/: .gitignore  package-lock.json  package.json
parser/src/: main.ts
parser/src/core/: parser.ts
parser/src/model/: atom-item.ts
requests/: 01_utils.md  02_index.md  03_insert.md  04_analyze.md  05_local_transformer.md  06_external_host_model.md  07_external_host_model.rev2.md  07_external_host_model.rev3.md  utils.md
sentence-transformers-api/: Taskfile.yml  main.py  pyproject.toml  req.http
spotify-scraper/: .gitignore  jest.config.js  package-lock.json  package.json
spotify-scraper/src/: main.ts
spotify-scraper/src/core/regex/: datetime.spec.ts  datetime.ts
spotify-scraper/src/model/: meta.spec.ts  meta.ts  playlist.ts  track.ts
spotify-scraper/src/test/core/: parse-result.ts  random.spec.ts  random.ts
