[project]
name = "sentence-transformers-api"
version = "0.1.0"
description = ""
authors = [
    {name = "もえるいのち",email = "103842124+burningmortal@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "sentence_transformers_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
