[project]
name = "sentence-transformers-api"
version = "0.1.0"
description = ""
authors = [
    {name = "もえるいのち",email = "103842124+burningmortal@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "sentence_transformers_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
